--- a/src/app/components/opcao/opcao.component.html
+++ b/src/app/components/opcao/opcao.component.html
@@ -348,7 +348,7 @@
               </div>
             </div>
 
-            <mat-form-field (keypress)="trataTecladoUsuario($event, isCategoriaAdesao() ? administradora : operadora)" appearance="outline" style="width: 100%">
+            <mat-form-field (keypress)="trataTecladoUsuarioEstado($event, operadora)" appearance="outline" style="width: 100%">
               <mat-label>Estado</mat-label>
               <input name="estado" matInput (ngModelChange)="modelChangeEstado()" [formControl]="estadoAutoCompleteControl" [matAutocomplete]="auto1" type="text" required>
               <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="estadoDisplayFn">
@@ -358,7 +358,7 @@
               </mat-autocomplete>
             </mat-form-field>
 
-            <mat-form-field (keypress)="trataTecladoUsuario($event, operadora)" appearance="outline" style="width: 100%">
+            <mat-form-field (keypress)="trataTecladoUsuario($event, operadora)" *ngIf="isCategoriaAdesao()" appearance="outline" style="width: 100%">
               <mat-label>Administradora</mat-label>
               <input #administradora name="administradora" matInput (ngModelChange)="modelChangeAdministradora()" [formControl]="administradoraAutoCompleteControl" [matAutocomplete]="auto2" type="text" [required]="isCategoriaAdesao()">
               <mat-autocomplete autoActiveFirstOption #auto2="matAutocomplete" [displayWith]="administradoraDisplayFn">
