--- a/src/app/components/opcao/opcao.component.html
+++ b/src/app/components/opcao/opcao.component.html
@@ -348,7 +348,7 @@
               </div>
             </div>
 
-            <mat-form-field (keypress)="trataTecladoUsuarioEstado($event, operadora)" appearance="outline" style="width: 100%">
+            <mat-form-field (keypress)="handleKeyboardEventEstadoInput($event, operadora)" appearance="outline" style="width: 100%">
               <mat-label>Estado</mat-label>
               <input name="estado" matInput (ngModelChange)="modelChangeEstado()" [formControl]="estadoAutoCompleteControl" [matAutocomplete]="auto1" type="text" required>
               <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="estadoDisplayFn">
@@ -358,7 +358,7 @@
               </mat-autocomplete>
             </mat-form-field>
 
-            <mat-form-field (keypress)="trataTecladoUsuario($event, operadora)" *ngIf="isCategoriaAdesao()" appearance="outline" style="width: 100%">
+            <mat-form-field (keypress)="handleKeyboardEventForm($event, operadora)" *ngIf="isCategoriaAdesao()" appearance="outline" style="width: 100%">
               <mat-label>Administradora</mat-label>
               <input #administradora name="administradora" matInput (ngModelChange)="modelChangeAdministradora()" [formControl]="administradoraAutoCompleteControl" [matAutocomplete]="auto2" type="text" [required]="isCategoriaAdesao()">
               <mat-autocomplete autoActiveFirstOption #auto2="matAutocomplete" [displayWith]="administradoraDisplayFn">
@@ -368,7 +368,7 @@
               </mat-autocomplete>
             </mat-form-field>
 
-            <mat-form-field (keypress)="trataTecladoUsuario($event, tabela)" appearance="outline" style="width: 100%">
+            <mat-form-field (keypress)="handleKeyboardEventForm($event, tabela)" appearance="outline" style="width: 100%">
               <mat-label>Operadora</mat-label>
               <input #operadora name="operadora" matInput (ngModelChange)="modelChangeOperadora()" [formControl]="operadoraAutoCompleteControl" [matAutocomplete]="auto3" type="text" required>
               <mat-autocomplete autoActiveFirstOption #auto3="matAutocomplete" [displayWith]="operadoraDisplayFn">
@@ -378,7 +378,7 @@
               </mat-autocomplete>
             </mat-form-field>
 
-            <mat-form-field (keypress)="trataTecladoUsuario($event, produto)" appearance="outline" style="width: 100%">
+            <mat-form-field (keypress)="handleKeyboardEventForm($event, produto)" appearance="outline" style="width: 100%">
               <mat-label>Tabela</mat-label>
               <input #tabela name="tabela" matInput (ngModelChange)="modelChangeTabela()" [formControl]="tabelaAutoCompleteControl" [matAutocomplete]="auto4" type="text" required>
               <mat-autocomplete autoActiveFirstOption #auto4="matAutocomplete" [displayWith]="tabelaDisplayFn">
@@ -388,7 +388,7 @@
               </mat-autocomplete>
             </mat-form-field>
 
-            <mat-form-field (keypress)="trataTecladoUsuario($event, valor0a18anos)" appearance="outline" style="width: 100%">
+            <mat-form-field (keypress)="handleKeyboardEventForm($event, valor0a18anos)" appearance="outline" style="width: 100%">
               <mat-label>Produto</mat-label>
               <input #produto name="produto" matInput [formControl]="produtoAutoCompleteControl" [matAutocomplete]="auto5" type="text" required>
               <mat-autocomplete autoActiveFirstOption #auto5="matAutocomplete" [displayWith]="produtoDisplayFn">
@@ -399,58 +399,58 @@
             </mat-form-field>
 
             <div>
-              <mat-form-field (keypress)="trataTecladoUsuario($event, valor19a23anos)"  appearance="outline" style="width: 33%">
+              <mat-form-field (keypress)="handleKeyboardEventForm($event, valor19a23anos)" appearance="outline" style="width: 33%">
                 <mat-label>R$ 0 a 18</mat-label>
                 <input #valor0a18anos name="valor0a18anos" type="number" matInput placeholder="0 a 18" [disabled]="!adicionandoOpcao() && !editandoOpcao()"
                        [(ngModel)]="opcaoEditando.valor0a18anos">
               </mat-form-field>
-              <mat-form-field (keypress)="trataTecladoUsuario($event, valor24a28anos)" appearance="outline" style="width: 33%">
+              <mat-form-field (keypress)="handleKeyboardEventForm($event, valor24a28anos)" appearance="outline" style="width: 33%">
                 <mat-label>R$ 19 a 23</mat-label>
                 <input #valor19a23anos name="valor19a23anos" type="number" matInput placeholder="19 a 23" [disabled]="!adicionandoOpcao() && !editandoOpcao()"
                        [(ngModel)]="opcaoEditando.valor19a23anos">
               </mat-form-field>
-              <mat-form-field (keypress)="trataTecladoUsuario($event, valor29a33anos)" appearance="outline" style="width: 33%">
+              <mat-form-field (keypress)="handleKeyboardEventForm($event, valor29a33anos)" appearance="outline" style="width: 33%">
                 <mat-label>R$ 24 a 28</mat-label>
                 <input #valor24a28anos name="valor24a28anos" type="number" matInput placeholder="24 a 28" [disabled]="!adicionandoOpcao() && !editandoOpcao()"
                        [(ngModel)]="opcaoEditando.valor24a28anos">
               </mat-form-field>
             </div>
             <div>
-              <mat-form-field (keypress)="trataTecladoUsuario($event, valor34a38anos)" appearance="outline" style="width: 33%">
+              <mat-form-field (keypress)="handleKeyboardEventForm($event, valor34a38anos)" appearance="outline" style="width: 33%">
                 <mat-label>R$ 29 a 33</mat-label>
                 <input #valor29a33anos name="valor29a33anos" type="number" matInput placeholder="29 a 33" [disabled]="!adicionandoOpcao() && !editandoOpcao()"
                        [(ngModel)]="opcaoEditando.valor29a33anos">
               </mat-form-field>
-              <mat-form-field (keypress)="trataTecladoUsuario($event, valor39a43anos)" appearance="outline" style="width: 33%">
+              <mat-form-field (keypress)="handleKeyboardEventForm($event, valor39a43anos)" appearance="outline" style="width: 33%">
                 <mat-label>R$ 34 a 38</mat-label>
                 <input #valor34a38anos name="valor34a38anos" type="number" matInput placeholder="34 a 38" [disabled]="!adicionandoOpcao() && !editandoOpcao()"
                        [(ngModel)]="opcaoEditando.valor34a38anos">
               </mat-form-field>
-              <mat-form-field (keypress)="trataTecladoUsuario($event, valor44a48anos)" appearance="outline" style="width: 33%">
+              <mat-form-field (keypress)="handleKeyboardEventForm($event, valor44a48anos)" appearance="outline" style="width: 33%">
                 <mat-label>R$ 39 a 43</mat-label>
                 <input #valor39a43anos name="valor39a43anos" type="number" matInput placeholder="39 a 43" [disabled]="!adicionandoOpcao() && !editandoOpcao()"
                        [(ngModel)]="opcaoEditando.valor39a43anos">
               </mat-form-field>
             </div>
             <div>
-              <mat-form-field (keypress)="trataTecladoUsuario($event, valor49a53anos)" appearance="outline" style="width: 33%">
+              <mat-form-field (keypress)="handleKeyboardEventForm($event, valor49a53anos)" appearance="outline" style="width: 33%">
                 <mat-label>R$ 44 a 48</mat-label>
                 <input #valor44a48anos name="valor44a48anos" type="number" matInput placeholder="44 a 48" [disabled]="!adicionandoOpcao() && !editandoOpcao()"
                        [(ngModel)]="opcaoEditando.valor44a48anos">
               </mat-form-field>
-              <mat-form-field (keypress)="trataTecladoUsuario($event, valor54a58anos)" appearance="outline" style="width: 33%">
+              <mat-form-field (keypress)="handleKeyboardEventForm($event, valor54a58anos)" appearance="outline" style="width: 33%">
                 <mat-label>R$ 49 a 53</mat-label>
                 <input #valor49a53anos name="valor49a53anos" type="number" matInput placeholder="49 a 53" [disabled]="!adicionandoOpcao() && !editandoOpcao()"
                        [(ngModel)]="opcaoEditando.valor49a53anos">
               </mat-form-field>
-              <mat-form-field (keypress)="trataTecladoUsuario($event, valor59ouMaisAnos)" appearance="outline" style="width: 33%">
+              <mat-form-field (keypress)="handleKeyboardEventForm($event, valor59ouMaisAnos)" appearance="outline" style="width: 33%">
                 <mat-label>R$ 54 a 58</mat-label>
                 <input #valor54a58anos name="valor54a58anos" type="number" matInput placeholder="54 a 58" [disabled]="!adicionandoOpcao() && !editandoOpcao()"
                        [(ngModel)]="opcaoEditando.valor54a58anos">
               </mat-form-field>
             </div>
             <div>
-              <mat-form-field (keypress)="trataTecladoUsuario($event, acomodacao)" appearance="outline" style="width: 33%">
+              <mat-form-field (keypress)="handleKeyboardEventForm($event, acomodacao)" appearance="outline" style="width: 33%">
                 <mat-label>R$ 59 ou Mais</mat-label>
                 <input #valor59ouMaisAnos name="valor59ouMaisAnos" type="number" matInput placeholder="59 ou mais" [disabled]="!adicionandoOpcao() && !editandoOpcao()"
                        [(ngModel)]="opcaoEditando.valor59ouMaisAnos">
