--- a/src/app/components/hospital/hospital.component.html
+++ b/src/app/components/hospital/hospital.component.html
@@ -81,7 +81,7 @@
             <mat-form-field appearance="outline" style="width: 100%">
               <mat-label>Local</mat-label>
               <input matInput placeholder="Local" name="local" [disabled]="!adicionandoHospital() && !editandoHospital()"
-                     [(ngModel)]="hospitalEditando.local">
+                     [(ngModel)]="hospitalEditando.local" required  >
             </mat-form-field>
             <button type="submit" hidden></button>
           </form>
