--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -323,7 +323,7 @@
             <mat-form-field appearance="outline" style="width: 100%">
               <mat-label>Reembolso</mat-label>
               <input matInput name="reembolso" type="number" placeholder="Reembolso" [disabled]="!adicionandoProduto() && !editandoProduto()"
-                     [(ngModel)]="produtoEditando.reembolso">
+                     [(ngModel)]="produtoEditando.reembolso" required>
             </mat-form-field>
 
             <mat-form-field appearance="outline" style="width: 100%">
@@ -361,111 +361,114 @@
             </mat-panel-description>
           </mat-expansion-panel-header>
 
-          <div class="flex-container" style="flex-direction: row">
-            <mat-card>
-              <mat-card-title>Pronto Socorro</mat-card-title>
-              <mat-card-content>
-                <div>
-                  <mat-form-field appearance="outline">
-                    <mat-label>Percentual</mat-label>
-                    <input matInput placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                           [(ngModel)]="produtoEditando.coparticipacao.percentualProntoSocorro">
-                  </mat-form-field>
-                </div>
+          <div>
+            <form class="flex-container" #formCoparts="ngForm" (submit)="onSubmit()">
+              <mat-card>
+                <mat-card-title>Pronto Socorro</mat-card-title>
+                <mat-card-content>
+                  <div>
+                    <mat-form-field appearance="outline">
+                      <mat-label>Percentual</mat-label>
+                      <input matInput name="percentualProntoSocorro" placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                             [(ngModel)]="produtoEditando.coparticipacao.percentualProntoSocorro" required>
+                    </mat-form-field>
+                  </div>
 
-                <div>
-                  <mat-form-field appearance="outline">
-                    <mat-label>Limite R$</mat-label>
-                    <input matInput placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                           [(ngModel)]="produtoEditando.coparticipacao.valorProntoSocorro">
-                  </mat-form-field>
-                </div>
-              </mat-card-content>
-            </mat-card>
+                  <div>
+                    <mat-form-field appearance="outline">
+                      <mat-label>Limite R$</mat-label>
+                      <input matInput name="valorProntoSocorro" placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                             [(ngModel)]="produtoEditando.coparticipacao.valorProntoSocorro" required>
+                    </mat-form-field>
+                  </div>
+                </mat-card-content>
+              </mat-card>
 
-            <mat-card style="margin-left: 20px">
-              <mat-card-title>Consulta</mat-card-title>
-              <mat-card-content>
-                <div>
-                  <mat-form-field appearance="outline">
-                    <mat-label>Percentual</mat-label>
-                    <input matInput placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                           [(ngModel)]="produtoEditando.coparticipacao.percentualConsulta">
-                  </mat-form-field>
-                </div>
+              <mat-card style="margin-left: 20px">
+                <mat-card-title>Consulta</mat-card-title>
+                <mat-card-content>
+                  <div>
+                    <mat-form-field appearance="outline">
+                      <mat-label>Percentual</mat-label>
+                      <input matInput name="percentualConsulta" placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                             [(ngModel)]="produtoEditando.coparticipacao.percentualConsulta" required>
+                    </mat-form-field>
+                  </div>
 
-                <div>
-                  <mat-form-field appearance="outline">
-                    <mat-label>Limite R$</mat-label>
-                    <input matInput placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                           [(ngModel)]="produtoEditando.coparticipacao.valorConsulta">
-                  </mat-form-field>
-                </div>
-              </mat-card-content>
-            </mat-card>
+                  <div>
+                    <mat-form-field appearance="outline">
+                      <mat-label>Limite R$</mat-label>
+                      <input matInput name="valorConsulta" placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                             [(ngModel)]="produtoEditando.coparticipacao.valorConsulta" required>
+                    </mat-form-field>
+                  </div>
+                </mat-card-content>
+              </mat-card>
 
-            <mat-card style="margin-left: 20px">
-              <mat-card-title>Exame Simples</mat-card-title>
-              <mat-card-content>
-                <div>
-                  <mat-form-field appearance="outline">
-                    <mat-label>Percentual</mat-label>
-                    <input matInput placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                           [(ngModel)]="produtoEditando.coparticipacao.percentualExameSimples">
-                  </mat-form-field>
-                </div>
+              <mat-card style="margin-left: 20px">
+                <mat-card-title>Exame Simples</mat-card-title>
+                <mat-card-content>
+                  <div>
+                    <mat-form-field appearance="outline">
+                      <mat-label>Percentual</mat-label>
+                      <input matInput name="percentualExameSimples" placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                             [(ngModel)]="produtoEditando.coparticipacao.percentualExameSimples" required>
+                    </mat-form-field>
+                  </div>
 
-                <div>
-                  <mat-form-field appearance="outline">
-                    <mat-label>Limite R$</mat-label>
-                    <input matInput placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                           [(ngModel)]="produtoEditando.coparticipacao.valorExameSimples">
-                  </mat-form-field>
-                </div>
-              </mat-card-content>
-            </mat-card>
+                  <div>
+                    <mat-form-field appearance="outline">
+                      <mat-label>Limite R$</mat-label>
+                      <input matInput name="valorExameSimples" placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                             [(ngModel)]="produtoEditando.coparticipacao.valorExameSimples" required>
+                    </mat-form-field>
+                  </div>
+                </mat-card-content>
+              </mat-card>
 
-            <mat-card style="margin-left: 20px">
-              <mat-card-title>Exame Especial</mat-card-title>
-              <mat-card-content>
-                <div>
-                  <mat-form-field appearance="outline">
-                    <mat-label>Percentual</mat-label>
-                    <input matInput placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                           [(ngModel)]="produtoEditando.coparticipacao.percentualExameEspecial">
-                  </mat-form-field>
-                </div>
+              <mat-card style="margin-left: 20px">
+                <mat-card-title>Exame Especial</mat-card-title>
+                <mat-card-content>
+                  <div>
+                    <mat-form-field appearance="outline">
+                      <mat-label>Percentual</mat-label>
+                      <input matInput name="percentualExameEspecial" placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                             [(ngModel)]="produtoEditando.coparticipacao.percentualExameEspecial" required>
+                    </mat-form-field>
+                  </div>
 
-                <div>
-                  <mat-form-field appearance="outline">
-                    <mat-label>Limite R$</mat-label>
-                    <input matInput placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                           [(ngModel)]="produtoEditando.coparticipacao.valorExameEspecial">
-                  </mat-form-field>
-                </div>
-              </mat-card-content>
-            </mat-card>
+                  <div>
+                    <mat-form-field appearance="outline">
+                      <mat-label>Limite R$</mat-label>
+                      <input matInput name="valorExameEspecial" placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                             [(ngModel)]="produtoEditando.coparticipacao.valorExameEspecial" required>
+                    </mat-form-field>
+                  </div>
+                </mat-card-content>
+              </mat-card>
 
-            <mat-card style="margin-left: 20px">
-              <mat-card-title>Internacao</mat-card-title>
-              <mat-card-content>
-                <div>
-                  <mat-form-field appearance="outline">
-                    <mat-label>Percentual</mat-label>
-                    <input matInput placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                           [(ngModel)]="produtoEditando.coparticipacao.percentualInternacao">
-                  </mat-form-field>
-                </div>
+              <mat-card style="margin-left: 20px">
+                <mat-card-title>Internação</mat-card-title>
+                <mat-card-content>
+                  <div>
+                    <mat-form-field appearance="outline">
+                      <mat-label>Percentual</mat-label>
+                      <input matInput name="percentualInternacao" placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                             [(ngModel)]="produtoEditando.coparticipacao.percentualInternacao" required>
+                    </mat-form-field>
+                  </div>
 
-                <div>
-                  <mat-form-field appearance="outline">
-                    <mat-label>Limite R$</mat-label>
-                    <input matInput placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                           [(ngModel)]="produtoEditando.coparticipacao.valorInternacao">
-                  </mat-form-field>
-                </div>
-              </mat-card-content>
-            </mat-card>
+                  <div>
+                    <mat-form-field appearance="outline">
+                      <mat-label>Limite R$</mat-label>
+                      <input matInput name="valorInternacao" placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
+                             [(ngModel)]="produtoEditando.coparticipacao.valorInternacao" required>
+                    </mat-form-field>
+                  </div>
+                </mat-card-content>
+              </mat-card>
+              <button type="submit" hidden></button>
+            </form>
           </div>
         </mat-expansion-panel>
 
