coparts em produtos nao sao mais obrigatorias

--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -370,7 +370,7 @@
                     <mat-form-field appearance="outline">
                       <mat-label>Percentual</mat-label>
                       <input matInput name="percentualProntoSocorro" placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                             [(ngModel)]="produtoEditando.coparticipacao.percentualProntoSocorro" required>
+                             [(ngModel)]="produtoEditando.coparticipacao.percentualProntoSocorro">
                     </mat-form-field>
                   </div>
 
@@ -378,7 +378,7 @@
                     <mat-form-field appearance="outline">
                       <mat-label>Limite R$</mat-label>
                       <input matInput name="valorProntoSocorro" placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                             [(ngModel)]="produtoEditando.coparticipacao.valorProntoSocorro" required>
+                             [(ngModel)]="produtoEditando.coparticipacao.valorProntoSocorro">
                     </mat-form-field>
                   </div>
                 </mat-card-content>
@@ -391,7 +391,7 @@
                     <mat-form-field appearance="outline">
                       <mat-label>Percentual</mat-label>
                       <input matInput name="percentualConsulta" placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                             [(ngModel)]="produtoEditando.coparticipacao.percentualConsulta" required>
+                             [(ngModel)]="produtoEditando.coparticipacao.percentualConsulta">
                     </mat-form-field>
                   </div>
 
@@ -399,7 +399,7 @@
                     <mat-form-field appearance="outline">
                       <mat-label>Limite R$</mat-label>
                       <input matInput name="valorConsulta" placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                             [(ngModel)]="produtoEditando.coparticipacao.valorConsulta" required>
+                             [(ngModel)]="produtoEditando.coparticipacao.valorConsulta">
                     </mat-form-field>
                   </div>
                 </mat-card-content>
@@ -412,7 +412,7 @@
                     <mat-form-field appearance="outline">
                       <mat-label>Percentual</mat-label>
                       <input matInput name="percentualExameSimples" placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                             [(ngModel)]="produtoEditando.coparticipacao.percentualExameSimples" required>
+                             [(ngModel)]="produtoEditando.coparticipacao.percentualExameSimples">
                     </mat-form-field>
                   </div>
 
@@ -420,7 +420,7 @@
                     <mat-form-field appearance="outline">
                       <mat-label>Limite R$</mat-label>
                       <input matInput name="valorExameSimples" placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                             [(ngModel)]="produtoEditando.coparticipacao.valorExameSimples" required>
+                             [(ngModel)]="produtoEditando.coparticipacao.valorExameSimples">
                     </mat-form-field>
                   </div>
                 </mat-card-content>
@@ -433,7 +433,7 @@
                     <mat-form-field appearance="outline">
                       <mat-label>Percentual</mat-label>
                       <input matInput name="percentualExameEspecial" placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                             [(ngModel)]="produtoEditando.coparticipacao.percentualExameEspecial" required>
+                             [(ngModel)]="produtoEditando.coparticipacao.percentualExameEspecial">
                     </mat-form-field>
                   </div>
 
@@ -441,7 +441,7 @@
                     <mat-form-field appearance="outline">
                       <mat-label>Limite R$</mat-label>
                       <input matInput name="valorExameEspecial" placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                             [(ngModel)]="produtoEditando.coparticipacao.valorExameEspecial" required>
+                             [(ngModel)]="produtoEditando.coparticipacao.valorExameEspecial">
                     </mat-form-field>
                   </div>
                 </mat-card-content>
@@ -454,7 +454,7 @@
                     <mat-form-field appearance="outline">
                       <mat-label>Percentual</mat-label>
                       <input matInput name="percentualInternacao" placeholder="Percentual" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                             [(ngModel)]="produtoEditando.coparticipacao.percentualInternacao" required>
+                             [(ngModel)]="produtoEditando.coparticipacao.percentualInternacao">
                     </mat-form-field>
                   </div>
 
@@ -462,7 +462,7 @@
                     <mat-form-field appearance="outline">
                       <mat-label>Limite R$</mat-label>
                       <input matInput name="valorInternacao" placeholder="Limite R$" [disabled]="!editandoProduto() && !adicionandoProduto()"
-                             [(ngModel)]="produtoEditando.coparticipacao.valorInternacao" required>
+                             [(ngModel)]="produtoEditando.coparticipacao.valorInternacao">
                     </mat-form-field>
                   </div>
                 </mat-card-content>
